<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lokki</string>
    <string name="app_long_name">Lokki</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="map">Map</string>
    <string name="places">Places</string>
    <string name="contacts">Contacts</string>
    <string name="about">About</string>
    <string name="visibility">Visibility</string>
    <string name="map_mode">Map mode</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>

    <string name="loading">Loading…</string>

    <string name="send_feedback">Send feedback</string>
    <string name="share">Tell your friends about this app</string>
    <string name="share_subject">Join me on Lokki!</string>
    <string name="share_text">Hi! I\'m using Lokki, the private location sharing app that\'s easy, secure, and free. Go to https://play.google.com/store/apps/details?id=cc.softwarefactory.lokki.android to install it.</string>
    <string name="add_contacts">Add contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="add_contact_dialog_save">Do you want to add %1$s?</string>
    <string name="i_can_see">Show on map</string>
    <string name="can_see_me">Can see me</string>
    <string name="your_lokki_id">Your Lokki ID is:</string>
    <string name="version">Version: %1$s</string>
    <string name="i_agree">I have read and I agree</string>
    <string name="continue_with_terms">Continue</string>
    <string name="welcome_title">Welcome to Lokki</string>
    <string name="welcome_text"><![CDATA[ <b>Welcome to Lokki!</b><br/>Now you can see where your friends and family members are on a map. You choose who can see where you are, and you can hide your location whenever you want.]]></string>

    <string name="terms_text">
                                <![CDATA[ Before you get started, you need to agree to the following terms:<br/><br/><br/>
                              1. I have read the terms of service and accept them.<br/><br/>
                              2. I consent to the collection and processing of personal data.<br/><br/>
                              3. I consent that the service can process and display my location.<br/><br/>
                              4. If I am under 15, I have my parents’ permission to use Lokki according to these terms.<br/><br/>
                              5. If I am under 13 and living in the United States, I may not use Lokki.<br/><br/>]]>
    </string>

    <string name="terms_title">Terms of use</string>
    <string name="security_sign_up">We need to authorize your account before you sign up. Follow the instructions that we have sent to: %1$s</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="sign_up_explanation">Enter your email address - other Lokki users will find you with this address.</string>
    <string name="type_your_email_address">Your email address</string>
    <string name="general_error">There was an error. Please try again later.</string>
    <string name="write_place_name">Enter a name for this place</string>
    <string name="delete_place">Do you want to remove this place?</string>
    <string name="will_be_deleted_from_places">will be removed from your places</string>
    <string name="rename_place">Rename %1$s?</string>
    <string name="place_created">Place created</string>
    <string name="place_removed">Place removed</string>
    <string name="place_renamed">Place renamed </string>
    <string name="place_limit_reached">You cannot create more places. Maximum limit reached.</string>
    <string name="you_are_visible">You are now VISIBLE</string>
    <string name="you_are_invisible">You are now INVISIBLE</string>
    <string name="places_how_to_create">To create a new place go to the map and long press the location where to place is located. Zoom the map to change the locations size, type a name and click OK.</string>
    <string name="search_contacts">Search contacts…</string>

    <string name="map_mode_default">Default</string>
    <string name="map_mode_satellite">Satellite</string>
    <string name="map_mode_hybrid">Hybrid</string>

    <string name="about_link_tell_a_friend">Tell a friend about Lokki</string>
    <string name="email_required">An email address is required.</string>
    <string name="required">Required</string>
    <string name="place_name_already_in_use">Name is already in use</string>
    <string name="add_place">Add place</string>
    <string name="gps_disabled">Lokki needs access to your location. Please turn on location access.</string>
    <string name="ignore">Ignore</string>
    <string name="location_services_disabled">Location services disabled</string>
    <string name="contact_added">Contact added</string>
    <string name="contact_email_address">Contact email address</string>
    <string name="add_email">Add email</string>
    <string name="place_name">Place Name</string>
    <string name="seeing_contact_not_allowed">The contact has not allowed you to see their location.</string>
    <string name="opt_in_text_analytics">Send anonymous usage data to help improve Lokki</string>
    <string name="opt_in_text_experiments">I would like to receive the newest experimental features of Lokki</string>
    <string name="send_anonymous_usage_data">Send anonymous usage data</string>
    <string name="receive_experimental_features">Receive experimental features</string>

    <string translatable="false" name="lokki_github_io_link">https://thesoftwarefactory.github.io/lokki/</string>
    <string translatable="false" name="lokki_play_store_link">market://details?id=cc.softwarefactory.lokki.android</string>

    <string translatable="false" name="analytics_screen_welcome">Welcome</string>
    <string translatable="false" name="analytics_screen_sign_up">Sign Up</string>
    <string translatable="false" name="analytics_screen_map">Map</string>
    <string translatable="false" name="analytics_screen_places">Places</string>
    <string translatable="false" name="analytics_screen_contacts">Contacts</string>
    <string translatable="false" name="analytics_screen_add_contacts">Add contacts</string>
    <string translatable="false" name="analytics_screen_about">About</string>
    <string translatable="false" name="analytics_screen_settings">Settings</string>

    <string translatable="false" name="analytics_category_ux">UX</string>
    <string translatable="false" name="analytics_category_signup">Signup</string>
    <string translatable="false" name="analytics_category_settings">Settings</string>

    <string translatable="false" name="analytics_action_click">Click</string>
    <string translatable="false" name="analytics_action_long_click">Long click</string>
    <string translatable="false" name="analytics_action_started_by_client">Started by client</string>
    <string translatable="false" name="analytics_action_backend_response">Backend response</string>
    <string translatable="false" name="analytics_action_change">Change</string>

    <string translatable="false" name="analytics_label_avatar_show_user">Avatar (show user in map)</string>
    <string translatable="false" name="analytics_label_show_on_map_checkbox">\"Show on map\" contact checkbox</string>
    <string translatable="false" name="analytics_label_can_see_me_checkbox">\"Can see me\" contact checkbox</string>
    <string translatable="false" name="analytics_label_disabled_show_on_map_checkbox">Disabled \"Show on map\" contact checkbox</string>
    <string translatable="false" name="analytics_label_contact_in_list">Contact in list</string>
    <string translatable="false" name="analytics_label_confirm_contact_add_from_list_dialog">Confirm contact add from list dialog</string>
    <string translatable="false" name="analytics_label_cancel_contact_add_from_list_dialog">Cancel contact add from list dialog</string>
    <string translatable="false" name="analytics_label_search_contacts_textbox">\"Search contacts\" textbox</string>
    <string translatable="false" name="analytics_label_clear_search_contacts_textbox_button">Clear \"Search contacts\" textbox button</string>
    <string translatable="false" name="analytics_label_add_email_button">Add email button</string>
    <string translatable="false" name="analytics_label_confirm_contact_add_from_email_dialog_successful">Confirm contact add from email dialog (checks successful)</string>
    <string translatable="false" name="analytics_label_cancel_contact_add_from_email_dialog">Cancel contact add from email dialog</string>
    <string translatable="false" name="analytics_label_successful">Successful</string>
    <string translatable="false" name="analytics_label_unauthorized_error">Unauthorized error</string>
    <string translatable="false" name="analytics_label_general_error">General error</string>
    <string translatable="false" name="analytics_label_map_mode">Map mode</string>
    <string translatable="false" name="analytics_label_visibility_toggle">Visibility toggle</string>
    <string translatable="false" name="analytics_label_add_place_overlay_activated">\"Add place\" overlay activated</string>
    <string translatable="false" name="analytics_label_cancel_add_place_button">Cancel \"Add place\" button</string>
    <string translatable="false" name="analytics_label_confirm_add_place_button">Confirm \"Add place\" button</string>
    <string translatable="false" name="analytics_label_my_location_button">My location button</string>
    <string translatable="false" name="analytics_label_cancel_name_new_place_dialog">Cancel name new place dialog</string>
    <string translatable="false" name="analytics_label_confirm_name_new_place_dialog_successful">Confirm name new place dialog (checks successful)</string>
    <string translatable="false" name="analytics_label_open_settings_from_location_disabled_dialog">Opened location settings from location disabled dialog</string>
    <string translatable="false" name="analytics_label_ignore_location_disabled_dialog">Ignored location settings disabled dialog</string>
    <string translatable="false" name="analytics_label_rename_place">Rename place</string>
    <string translatable="false" name="analytics_label_delete_place">Delete place</string>
    <string translatable="false" name="analytics_label_confirm_rename_place_dialog">Confirm rename place dialog</string>
    <string translatable="false" name="analytics_label_cancel_rename_place_dialog">Cancel rename place dialog</string>
    <string translatable="false" name="analytics_label_confirm_delete_place_dialog">Confirm delete place dialog</string>
    <string translatable="false" name="analytics_label_cancel_delete_place_dialog">Cancel delete place dialog</string>
    <string translatable="false" name="analytics_label_analytics_opt_in_toggle">Analytics opt-in toggle</string>
    <string translatable="false" name="analytics_label_experiments_opt_in_toggle">Experiments opt-in toggle</string>

</resources>
