<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_gradient">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:src="@drawable/about_transparent" />

    <TextView
        android:id="@+id/title"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/app_long_name"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/logo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <TextView
        android:id="@+id/explanation"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_explanation"
        android:gravity="center"
        android:layout_below="@id/title"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_width="300dp" />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/explanation"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:hint="@string/type_your_email_address" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:onClick="signUpClick"
        android:background="@android:color/darker_gray"
        android:text="@string/title_activity_sign_up" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_loading"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="invisible"/>

</RelativeLayout>

